--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,57 +74,6 @@ nav ul {
   display: none;
 }
 
-header .hero {
-  background-size: cover;
-  text-align: center;
-}
-
-.hero h2 {
-  font-size: 36px;
-}
-
-.cta__section {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-areas:
-    "top"
-    "bottom";
-}
-
-.top {
-  grid-area: top;
-}
-
-.cta__section div,
-.services__section div {
-  width: 100%;
-}
-
-.cta__section--wrapper {
-  text-align: center;
-  margin: 60px 0;
-  max-width: unset;
-}
-
-.egg__bg,
-.cup__bg {
-  height: 300px;
-  background-size: cover;
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
-
-:root {
-  --font-title: "Fraunces", serif;
-  --font-text: "Barlow", sans-serif;
-  --grayish-blue: hsl(210, 4%, 67%);
-  --dark-grayish-blue: hsl(232, 10%, 55%);
-  --very-dark-desaturated-blue: hsl(212, 27%, 19%);
-  --dark-desaturated-cyan: hsl(167, 40%, 24%);
-  --dark-blue: hsl(198, 62%, 26%);
-  --dark-moderate-cyan: hsl(168, 34%, 41%);
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -164,18 +113,7 @@ header {
 nav .container {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
-}
-
-header .hero {
-  background: url("../images/desktop/image-header.jpg");
-  background-position: bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  min-height: 400px;
+  padding: 30px 0;
 }
 
 nav ul li a {
@@ -195,24 +133,50 @@ nav ul li:last-of-type a {
   border-radius: 25px;
 }
 
+/********** HERO SECTION **********/
+
+header .hero {
+  background: url("../images/desktop/image-header.jpg");
+  background-position: bottom;
+  text-align: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  min-height: 400px;
+}
+
 .hero h2 {
   color: white;
-  font-size: 46px;
-  margin-top: 5%;
+  font-size: 36px;
+  margin-top: 20%;
   letter-spacing: 8px;
   font-weight: 900;
   text-transform: uppercase;
 }
 
-.cta__section,
-.services__section {
+/********** CTA SECTION **********/
+
+.cta__section {
+  display: grid;
   width: 100%;
-  display: flex;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr 3fr 2fr 3fr;
+  grid-template-areas:
+    "top"
+    "bottom";
+}
+
+.top {
+  grid-area: top;
 }
 
 .cta__section--wrapper {
-  margin: 120px auto;
-  max-width: 400px;
+  max-width: 90%;
+  text-align: center;
+  margin: 60px auto;
+  width: 100%;
 }
 
 .cta__section--wrapper h3 {
@@ -240,17 +204,19 @@ nav ul li:last-of-type a {
 .egg__bg {
   background-image: url("../images/desktop/image-transform.jpg");
   background-repeat: no-repeat;
-  background-position: left;
+  background-position: center;
   background-color: #ffd302;
-  background-size: contain;
+  background-size: cover;
+  width: 100%;
 }
 
 .cup__bg {
   background-image: url("../images/desktop/image-stand-out.jpg");
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: center;
   background-color: #ff806f;
-  background-size: contain;
+  background-size: cover;
+  font-size: 0;
 }
 
 /********** SERVICE SECTION **********/
@@ -261,10 +227,9 @@ nav ul li:last-of-type a {
 
 .graphic__section {
   background-image: url("../images/desktop/image-graphic-design.jpg");
-  background-repeat: no-repeat;
   background-position: top;
-  background-size: contain;
-  background-color: #a1decf;
+  background-size: cover;
+  background-color: #8ed5c7;
   height: 475px;
   position: relative;
 }
