--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -23,51 +23,13 @@ body {
   color: var(--dark-grayish-blue);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-family: var(--font-title);
-}
-
-a {
-  text-decoration: none;
-}
-
-ul {
-  display: flex;
-}
-
-li {
-  list-style: none;
-}
-
-.container {
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
-header {
-  background-color: #3ebfff;
-}
-
 nav .container {
   display: flex;
   justify-content: space-between;
   padding: 30px;
 }
 
-header .hero {
-  background: url("../images/desktop/image-header.jpg");
-  background-position: bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  min-height: 400px;
-}
+/********** NAV SECTION **********/
 
 nav ul li a {
   color: white;
@@ -86,29 +48,48 @@ nav ul li:last-of-type a {
   border-radius: 25px;
 }
 
+/********** HERO SECTION **********/
+
+header .hero {
+  background: url("../images/desktop/image-header.jpg");
+  background-position: bottom;
+  text-align: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  min-height: 600px;
+}
+
 .hero h2 {
   color: white;
-  font-size: 46px;
-  margin-top: 5%;
+  font-size: 36px;
+  margin-top: 160px;
   letter-spacing: 8px;
   font-weight: 900;
   text-transform: uppercase;
+  margin-bottom: 50px;
 }
 
-.cta__section,
-.services__section {
+/********** CTA SECTION **********/
+
+.cta__section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: unset;
   width: 100%;
-  display: flex;
 }
 
-.cta__section div,
-.services__section div {
-  width: 50%;
+.top {
+  grid-area: unset;
 }
 
 .cta__section--wrapper {
-  margin: 120px auto;
-  max-width: 400px;
+  text-align: left;
+  margin: 120px 80px;
+  width: auto;
 }
 
 .cta__section--wrapper h3 {
@@ -124,29 +105,32 @@ nav ul li:last-of-type a {
   margin-bottom: 24px;
 }
 
-.cta__section--wrapper a {
+.button {
+  position: relative;
   color: var(--very-dark-desaturated-blue);
   font-size: 16px;
   text-transform: uppercase;
   font-family: var(--font-title);
   font-weight: 900;
-  text-decoration: underline;
 }
 
 .egg__bg {
-  background-image: url("../images/desktop/image-transform.jpg");
   background-repeat: no-repeat;
-  background-position: left;
+  background-position: center;
   background-color: #ffd302;
-  background-size: contain;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .cup__bg {
-  background-image: url("../images/desktop/image-stand-out.jpg");
   background-repeat: no-repeat;
-  background-position: right;
+  background-position: center;
   background-color: #ff806f;
-  background-size: contain;
+  background-size: cover;
+  font-size: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .graphic__section {
@@ -155,7 +139,7 @@ nav ul li:last-of-type a {
   background-position: center;
   background-size: contain;
   background-color: #a1decf;
-  height: 475px;
+  /*   height: 475px; */
   position: relative;
 }
 
@@ -165,9 +149,11 @@ nav ul li:last-of-type a {
   background-position: center;
   background-size: contain;
   background-color: #5eccff;
-  height: 475px;
+  /*  height: 475px; */
   position: relative;
 }
+
+/********** SERVICE SECTION **********/
 
 .services__section--wrapper {
   display: flex;
