--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -1,84 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
-
-:root {
-  --font-title: "Fraunces", serif;
-  --font-text: "Barlow", sans-serif;
-  --grayish-blue: hsl(210, 4%, 67%);
-  --dark-grayish-blue: hsl(232, 10%, 55%);
-  --very-dark-desaturated-blue: hsl(212, 27%, 19%);
-  --dark-desaturated-cyan: hsl(167, 40%, 24%);
-  --dark-blue: hsl(198, 62%, 26%);
-  --dark-moderate-cyan: hsl(168, 34%, 41%);
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: var(--font-text);
-  font-size: 18px;
-  color: var(--dark-grayish-blue);
-}
-
-nav .container {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px;
-}
-
 /********** NAV SECTION **********/
 
-nav ul li a {
-  color: white;
-  margin-left: 40px;
-  font-size: 16px;
+.mobile__menu--icon {
+  display: none;
 }
 
-nav ul li:last-of-type a {
-  text-transform: uppercase;
-  font-family: var(--font-title);
-  margin-left: 50px;
-  font-size: 15px;
-  color: #333;
-  background-color: white;
-  padding: 15px 24px;
-  border-radius: 25px;
+nav ul {
+  display: flex;
 }
 
 /********** HERO SECTION **********/
 
 header .hero {
-  background: url("../images/desktop/image-header.jpg");
-  background-position: bottom;
-  text-align: center;
   background-size: contain;
-  background-repeat: no-repeat;
-  height: 100%;
-  display: flex;
-  justify-content: center;
   min-height: 600px;
 }
 
 .hero h2 {
-  color: white;
-  font-size: 36px;
   margin-top: 160px;
-  letter-spacing: 8px;
-  font-weight: 900;
-  text-transform: uppercase;
-  margin-bottom: 50px;
 }
 
 /********** CTA SECTION **********/
 
 .cta__section {
-  display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-template-areas: unset;
   width: 100%;
 }
 
@@ -92,198 +37,36 @@ header .hero {
   width: auto;
 }
 
-.cta__section--wrapper h3 {
-  color: var(--very-dark-desaturated-blue);
-  font-weight: 900;
-  font-size: 32px;
-  margin-bottom: 24px;
-}
-
-.cta__section--wrapper p {
-  font-size: 16px;
-  line-height: 1.8;
-  margin-bottom: 24px;
-}
-
-.button {
-  position: relative;
-  color: var(--very-dark-desaturated-blue);
-  font-size: 16px;
-  text-transform: uppercase;
-  font-family: var(--font-title);
-  font-weight: 900;
-}
-
-.egg__bg {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #ffd302;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.cup__bg {
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #ff806f;
-  background-size: cover;
-  font-size: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.graphic__section {
-  background-image: url("../images/desktop/image-graphic-design.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  background-color: #a1decf;
-  /*   height: 475px; */
-  position: relative;
-}
-
-.photography__section {
-  background-image: url("../images/desktop/image-photography.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  background-color: #5eccff;
-  /*  height: 475px; */
-  position: relative;
-}
-
 /********** SERVICE SECTION **********/
 
-.services__section--wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 0 auto;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 30px;
+.services__section {
+  grid-template-columns: 1fr 1fr;
 }
 
-.graphic__section .services__section--wrapper h4 {
-  font-size: 24px;
-  font-weight: 900;
-  margin-bottom: 24px;
-  color: var(--dark-desaturated-cyan);
-}
-
-.graphic__section .services__section--wrapper p {
-  font-size: 16px;
-  line-height: 1.8;
-  color: var(--dark-desaturated-cyan);
-  text-align: center;
-}
-
-.photography__section .services__section--wrapper h4 {
-  font-size: 24px;
-  font-weight: 900;
-  margin-bottom: 24px;
-  color: var(--dark-blue);
-}
-
-.photography__section .services__section--wrapper p {
-  font-size: 16px;
-  line-height: 1.8;
-  color: var(--dark-blue);
-  text-align: center;
-}
+/********** CLIENT SECTION **********/
 
 .client__section {
   padding: 120px 0;
 }
 
-.client__section h3 {
-  text-align: center;
-  margin-bottom: 64px;
-  letter-spacing: 5px;
-  text-transform: uppercase;
-  font-size: 18px;
+.client__section--testimonial {
+  margin-bottom: 0px;
 }
 
 .client__section--wrapper {
-  display: flex;
-  justify-content: space-evenly;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
 }
 
-.client__section--testimonial {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-}
-
-.client__section--testimonial img {
-  align-self: center;
-  max-width: 100px;
-  border-radius: 100%;
-}
-
-.client__section--testimonial-text {
-  text-align: center;
-  margin: 64px 0;
-  color: var(--very-dark-desaturated-blue);
-}
-
-.client__section--description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-
-.client__section--description p {
-  margin: 0 0 14px 0;
-}
-
-.client__section--description-name {
-  font-family: var(--font-title);
-  color: var(--very-dark-desaturated-blue);
-  font-size: 20px;
-}
-
-.client__section--description-charge {
-  font-size: 16px;
-}
+/********** WORKS **********/
 
 .works__section {
-  display: flex;
-  width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
 }
 
-.work {
-  width: 25%;
-  font-size: 0;
-}
-
-.work img {
-  width: 100%;
-}
+/********** FOOTER **********/
 
 footer {
-  background-color: #90d4c5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 120px 0;
-}
-
-footer svg {
-  margin-bottom: 24px;
-}
-
-footer svg path {
-  fill: var(--dark-moderate-cyan);
-}
-
-footer ul li {
-  color: var(--dark-moderate-cyan);
-  margin-bottom: 24px;
-  font-size: 16px;
-  margin: 0 30px;
-  margin-bottom: 24px;
+  padding: 50px 0;
 }
