adding some transitions

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -8,6 +8,12 @@ nav ul {
   display: flex;
 }
 
+nav ul li:last-of-type a:hover {
+  color: white;
+  background-color: rgba(255, 255, 255, 0.4);
+  transition: 0.4s;
+}
+
 /********** HERO SECTION **********/
 
 header .hero {
@@ -43,6 +49,30 @@ header .hero {
   grid-template-columns: 1fr 1fr;
 }
 
+.button__underline--yellow:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: -6px;
+  width: 110%;
+  height: 10px;
+  background-color: rgba(249, 212, 0, 1);
+  transition: 0.4s;
+}
+
+.button__underline--red:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: -6px;
+  width: 110%;
+  height: 10px;
+  border-radius: 15px;
+  background-color: rgba(254, 120, 102, 1);
+  z-index: -1;
+  transition: 0.4s;
+}
+
 /********** CLIENT SECTION **********/
 
 .client__section {
@@ -69,4 +99,14 @@ header .hero {
 
 footer {
   padding: 50px 0;
+}
+
+.footer__list--menu li:hover {
+  color: white;
+  transition: 0.3s;
+}
+
+.footer__list--social li:hover svg path {
+  fill: white;
+  transition: 0.3s;
 }
