--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -8,10 +8,17 @@ nav ul {
   display: flex;
 }
 
+nav ul li a {
+  transition: 0.4s;
+}
+
+nav ul li a:hover {
+  color: #333;
+}
+
 nav ul li:last-of-type a:hover {
   color: white;
   background-color: rgba(255, 255, 255, 0.4);
-  transition: 0.4s;
 }
 
 /********** HERO SECTION **********/
@@ -57,7 +64,6 @@ header .hero {
   width: 110%;
   height: 10px;
   background-color: rgba(249, 212, 0, 1);
-  transition: 0.4s;
 }
 
 .button__underline--red:hover::after {
@@ -70,7 +76,6 @@ header .hero {
   border-radius: 15px;
   background-color: rgba(254, 120, 102, 1);
   z-index: -1;
-  transition: 0.4s;
 }
 
 /********** CLIENT SECTION **********/
@@ -95,6 +100,15 @@ header .hero {
   grid-template-rows: 1fr;
 }
 
+.work img {
+  filter: brightness(90%);
+  transition: 0.4s;
+}
+
+.work img:hover {
+  filter: brightness(100%);
+}
+
 /********** FOOTER **********/
 
 footer {
@@ -103,10 +117,8 @@ footer {
 
 .footer__list--menu li:hover {
   color: white;
-  transition: 0.3s;
 }
 
 .footer__list--social li:hover svg path {
   fill: white;
-  transition: 0.3s;
 }
